--- a/css/custom-bootstrap.css
+++ b/css/custom-bootstrap.css
@@ -226,6 +226,9 @@ td{
 }
 .caro-cell{
     min-width: 34em;
+    min-height: 20em;
+    max-width: 34em;
+    max-height: 20em;
 }
 .cell-1{
     transform: translateX(+2.5em);
@@ -240,7 +243,7 @@ td{
     transform: translateX(-2.5em);
     opacity: 20%;
 }
-[name = caro-img]{
+.caro-cell img{
     width: 100%;
     height: 100%;
     border-radius: 5px;
